Test for copy workflow

--- a/paper_3_annotations.html
+++ b/paper_3_annotations.html
@@ -131,7 +131,7 @@
           <li><a href="#tong-et-al-2017---sensors">Tong et al 2017 - Sensors</a></li>
           <li><a href="#xu-et-al-2021---ann-assoc-am-geogr">Xu et al 2021 - Ann Assoc Am Geogr</a></li>
           <li><a href="#zhao-and-zhang-2019---transp-res-part-c-emerg-technol">Zhao and Zhang 2019 - Transp Res Part C Emerg Technol</a></li>
-          <li><a href="#references">References</a></li>
+          <li><a href="#bibliography">Bibliography</a></li>
           </ul>
         </nav>
         <ul class="authors">
@@ -607,8 +607,8 @@
             In the future, we can gher confidence level increases the probability value of the missing choice. In the future, we can apply the proposed modeling framework to a joint location-duration-path model to find the most likely location-duration-path pply the proposed modeling framework to a joint location-duration-path model to find the most likely location-duration-path choices simultaneously for the missing observations if we have long-period (e.g. over one year) high-frequency trajectory data.
     </blockquote>
 </div>
-<div id="references" class="section level2 unnumbered">
-<h2 class="unnumbered">References</h2>
+<div id="bibliography" class="section level2 unnumbered">
+<h2 class="unnumbered">Bibliography</h2>
 <div id="refs" class="references csl-bib-body hanging-indent">
 <div id="ref-Chen2019-cn" class="csl-entry">
 Chen, Guangshuo, Aline Carneiro Viana, Marco Fiore, and Carlos Sarraute. 2019. <span>“Complete Trajectory Reconstruction from Sparse Mobile Phone Data.”</span> <em>EPJ Data Science</em> 8 (1): 30. <a href="https://doi.org/10.1140/epjds/s13688-019-0206-8">https://doi.org/10.1140/epjds/s13688-019-0206-8</a>.
